--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.SettingsActivity" />
         <activity android:name=".activities.CustomMapActivity"></activity>
         <activity android:name=".activities.database.editors.LinksEditActivity" />
         <activity android:name=".activities.database.editors.LinkTypesEditActivity" />
