--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,13 +59,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.maps:google-maps-services:0.1.20'
     implementation 'com.google.android.material:material:1.3.0'
 
 
     implementation("com.google.guava:guava:30.1.1-android")
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
 
     def room_version = "2.3.0"
 
